# milvus-vector-databases-benchmark

./: README.md  pyproject.toml
db/: config.py
notebooks/: 1-dbr-documents-eda.ipynb
scripts/: download_blogs_r&h.sh
src/api/: main.py
src/db/: config.py  db.py
