[tool.poetry]
name = "vector-databases-benchmark"
version = "0.1.0"
description = "Vector databases benchmark"
authors = ["Daniel Baena"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymilvus = "^2.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
