[tool.poetry]
name = "vector-databases-benchmark"
version = "0.1.0"
description = "Vector databases benchmark"
authors = ["Daniel Baena"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
pymilvus = "^2.5.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
